--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   sqflite: ^2.4.2
   supabase_flutter: ^2.3.4
+  timeago: ^3.7.1
   translator: ^1.0.0
   url_launcher: ^6.2.6
   video_player: ^2.8.6
