--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
+  chewie: ^1.11.3
   dartz: ^0.10.1
   dio: ^5.8.0+1
   encrypt: ^5.0.3
