--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   url_launcher: ^6.2.6
   video_player: ^2.8.6
   webview_flutter_plus: ^0.4.4
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
